@@ -35,6 +35,9 @@ Revision 4.2.5rc2
   methods now accept optional authData parameter to remove specific entries
   from LCD. This can be useful for modifying security parameters for
   specific securityName.
+- SNMP credentials management reworked to allow multiple securityNames's in
+  snmpCommunityEntry and usmUserEntry tables. Changes made to addV1System(),
+  addV3User() functions as well as to their oneliner's wrappers.
 - AsynNotificationOriginator.cfgCmdGen() does not take into account
   securityModel & securityLevel when reducing LCD access via addTrapUser().
   This improves LCD consistency on sparse add/del operatons but also
